styles/style-index.css
#index {
  padding: 40px 0;
  border-top: 1px solid #ddd;
  transition: 1s;
}
.toc-container {
  width: 85%;
  margin: 0 auto;
}

.toc-buttons {
  display: flex;
  justify-content: flex-start;
  flex-wrap: nowrap;
  gap: 10px;
  justify-content: center;

  overflow-x: auto;
  -webkit-overflow-scrolling: touch;
  scrollbar-width: thin;
  padding: 15px 10px;
  margin-bottom: 30px;
  scrollbar-color: #244855 #ffffff00;
}

.toc-button {
  background-color: #244855;
  color: #ffffff;
  border: none;
  padding: 12px 25px;
  margin-bottom: -5px;
  cursor: pointer;
  font-size: 16px;
  font-weight: bold;
  border-radius: 5px;
  transition: background-color 0.4s ease, transform 0.2s;
  white-space: nowrap;
}

.toc-button.active {
  background-color: #e64833;
  transform: scale(1.05);
}

.toc-button:hover {
  background-color: #4588a0;
}
.toc-button.active:hover {
  background-color: #e64833;
}

.toc-content .table {
  display: none;
}

.toc-content .table.active {
  display: block;
  padding: 20px;
  background: #dddddd;
  border-radius: 20px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  transition: 0.4s;
}

.toc-content .table.active:hover {
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
}

.table h2 {
  font-size: 28px;
  color: #244855;
  margin-bottom: 20px;
  text-align: center;
}

/* Table Styling */
.styled-table {
  width: 100%;
  border-collapse: collapse;
}

.styled-table thead th {
  background-color: #244855;
  color: #cdcdcd;
  text-align: center;
  font-weight: bold;
}

.styled-table th,
.styled-table td {
  padding: 12px 15px;
  border: 1px solid #ddd;
}

.styled-table tbody tr {
  border-bottom: 1px solid #ffffff;
}

.styled-table tbody tr:nth-of-type(even) {
  background-color: #cbcbcb;
}

.styled-table tbody tr:last-of-type {
  border-bottom: 2px solid #244855;
}

.styled-table tbody tr.active-row {
  font-weight: bold;
  color: #244855;
}

/* Style buttons in the second column */
.styled-table .popup-button {
  background-color: #08612d;
  color: white;
  width: 100%;
  padding: 5px 10px;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  transition: 0.3s;
}

.styled-table .popup-button:hover {
  background-color: #2c744a;
}

/* Responsive styles */
@media (max-width: 768px) {
  .toc-container {
    width: 95%;
  }
  .toc-button {
    padding: 10px 20px;
    font-size: 12px;
  }

  .table h2 {
    font-size: 24px;
  }

  .toc-buttons {
    gap: 5px;
  }

  .toc-container {
    padding: 0 10px;
  }
}

